--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "4",
+    "@invertase/react-native-apple-authentication": "^2.3.0",
     "@notifee/react-native": "^7.8.0",
     "@react-native-clipboard/clipboard": "^1.12.1",
     "@react-native-community/checkbox": "^0.5.17",
