--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "react-native-tab-view": "^3.5.2",
     "react-native-toast-notifications": "^3.4.0",
     "react-native-vector-icons": "^10.0.0",
+    "react-native-version-number": "^0.3.6",
     "react-native-video": "^5.2.1",
     "react-native-video-controls": "^2.8.1",
     "react-redux": "^8.1.1",
